# Ashielder

./: .env.example  .gitignore  README.md  embed_script.py  main.py  pyproject.toml
.agents/plugins/: marketplace.json
distilbert_m2/: tokenizer_config.json
extension/: README.md  build-config.js  config.js  content.js  manifest.json  options.css  options.html  options.js  package.json  sidepanel.css  sidepanel.html  sidepanel.js
knowledge/: intel_corpus.json
lighturlnet/: char2idx.json  vocab.json
plugins/adk-docs/: .mcp.json
plugins/adk-docs/.codex-plugin/: plugin.json
scripts/: smoke_adk_demo.py  test_decision_tool.py  test_mailbox_diagnosis.py
tri_model_agent/: __init__.py  agent.py
