[project]
name = "asheilder-phase-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "jsonschema==4.23.0",
    "pydantic==2.12.5",
    "requests>=2.33.1",
    "scikit-learn>=1.5.0",
    "streamlit>=1.56.0",
    "tldextract>=5.1.2",
    "uvicorn>=0.44.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "confusable-homoglyphs>=3.3.1",
    "onnxruntime>=1.27.0",
    "google-adk[extensions]>=2.2.0",
    "google-auth>=2.40.0",
    "google-auth-oauthlib>=1.2.0",
    "cryptography>=45.0.0",
    "litellm>=1.74.0",
]
